syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.naming;

import "ClassesDefinitions.proto";

// NamingServer -> NamingServer Service

message RegisterRequest {
  string serviceName = 1;
  string host = 2;
  int32 port = 3;
  repeated string qualifiers = 4;
}

message RegisterResponse {
  // No arguments
}

message LookupRequest {
  string serviceName = 1;
  repeated string qualifiers = 2;
}

message LookupResponse {
  repeated ServerEntry serverEntries = 1;
}

message DeleteRequest {
  string serviceName = 1;
  string host = 2;
  int32 port = 3;
}

message DeleteResponse {
  // No arguments
}

service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}