syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract;

// Classes System Definitions

message Student {
  string studentId = 1;
  string studentName = 2;
  string dateAdded = 3;
}

message TimedEnrollments {
  bool areOpen = 1;
  string dateOpenedClosed = 2;
}

message ClassState {
  int32 capacity = 1;
  TimedEnrollments openEnrollments = 2;
  repeated Student enrolled = 3;
  repeated Student discarded = 4;
}

message ServerEntry {
  int32 port = 1;
  string host = 2;
  repeated string qualifiers = 3;
}

enum ResponseCode {
  OK = 0;
  NON_EXISTING_STUDENT = 1;
  FULL_CLASS = 2;
  STUDENT_ALREADY_ENROLLED = 3;
  ENROLLMENTS_ALREADY_OPENED = 4;
  ENROLLMENTS_ALREADY_CLOSED = 5;
  INACTIVE_SERVER = 6;
  WRITING_NOT_SUPPORTED = 7;
}
